<resources>
    <string name="app_name">Media Cancha</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="nav_drawer_option_profile">My Profile</string>
    <string name="nav_drawer_option_medical_centers">Medical Centers</string>
    <string name="nav_drawer_option_ARS">Specialists</string>
    <string name="nav_drawer_tittle_advanced">Advanced</string>
    <string name="nav_drawer_option_settings">Settings</string>
    <string name="nav_drawer_option_about">About Up°</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit">Edit</string>
    <string name="pref_category_title_general">GENERAL</string>
    <string name="pref_category_title_about">ABOUT</string>
    <string name="pref_title_map_style">Map style</string>
    <string name="pref_title_push_notifications">Push Notifications</string>
    <string name="pref_title_theme">Theme</string>
    <string name="pref_title_account_id">Logged in as</string>
    <string name="pref_title_version_id">App Version</string>
    <string name="pref_title_build_id">Build Number</string>
    <string name="pref_summary_notifications_on">Allowed</string>
    <string name="pref_summary_notifications_off">Not allowed</string>
    <string name="pref_summary_theme_on">Dark</string>
    <string name="pref_summary_theme_off">Light</string>
    <string name="pref_key_map_style" translatable="false">map_style</string>
    <string name="pref_key_push_notifications" translatable="false">push_notifications</string>
    <string name="pref_key_theme" translatable="false">theme</string>
    <string name="pref_key_account_id" translatable="false">account_id</string>
    <string name="pref_key_version_id" translatable="false">version_id</string>
    <string name="pref_key_build_id" translatable="false">build_id</string>
    <string name="pref_default_map_style">1</string>
    <string-array name="pref_list_map_style">
        <item>Normal</item>
        <item>Satellite</item>
        <item>Terrain</item>
        <item>Hybrid</item>
    </string-array>
    <string-array name="pref_list_map_style_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="facebook_app_id">116280978808946</string>
    <string name="facebook_application_id" translatable="false">116280978808946</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_activity_matches_calendar">ActivityMatchesCalendar</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_activity_new_feed">ActivityNewFeed</string>
    <string name="permission_explanation">Allow this app to use your location to show distance to attractions?</string>
    <string name="permission_explanation_action">Let\'s do it!</string>
    <string name="hour_hint">Dia</string>
    <string name="minute_hint">Hora</string>
    <string-array name="hour_display">
        <item>12</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
    </string-array>
    <string-array name="minute_display">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
    </string-array>
    <string-array name="half_day">
        <item>AM</item>
        <item>PM</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_map">Map</string>
    <string name="pref_key_divisions" translatable="false">divisions</string>
    <string name="pref_title_divisions">Divisiones</string>
    <string name="pref_default_divisions" translatable="false">Div1_Calendar</string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>
    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user..</string>
    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>
    <string name="emailpassword_status_fmt">Email User: %s</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>
    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="title_activity_about">Upgrade Developers Group</string>
    <string name="dev_email">jfrometa@upgrade.do</string>
    <string name="email_subject">About fapp!</string>
    <string name="email_body">
        "Upgrade Developers Group.\n\n
        email: jfrometa@upgrade.do"
    </string>
    <string name="area_type_touristic">Touristic Area</string>
    <string name="area_type_recreational">Recreational Area</string>
    <string name="nearby_attraction">Nearby tourist attraction</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="title_activity_tour">Estadios</string>
    <string name="title_activity_main">CardsUI</string>
    <string name="title">Title</string>
    <string name="desc">Description</string>
    <string name="overflow">Menu Overflow</string>
    <string name="color_stripe">Color Stripe</string>
    <string name="title_section1">ABR 04-10</string>
    <string name="title_section2">ABR 11-17</string>
    <string name="title_section3">ABR 18-24</string>
    <string name="title_section4">ABR 25-MAY 01</string>
    <string name="title_section5">MAY 02-08 </string>
    <string name="title_section6">MAY 09-15 </string>
    <string name="title_section7">MAY 16-22 </string>
    <string name="title_section8">MAY 23-29 </string>
    <string name="title_section9">MAY 30-JUN 5</string>
    <string name="title_section10">JUN 6-12</string>
    <string name="title_section11">JUN 13-19</string>
    <string name="title_section112">JUN 20-26</string>
    <string name="team_vs">VS</string>
    <string name="title_activity_activity_news_details">Noticias</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_activity_favorite_nfollow">ActivityFavoriteNFollow</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string-array name="fb_accounts">
        <item>296124937084496</item>
        <item>1525557101042912</item>
        <item>1137323726286992</item>
        <item>968428659905112</item>
        <item>100008514909191</item>
        <item>813010562085456</item>
        <item>1591266437784811</item>
        <item>376424649184793</item>
        <item>100009996696006</item>
        <item>238163279720335</item>
    </string-array>
    <string name="desc_chat">Demonstrates using a FirebaseRecyclerAdapter to load data from Firebase Database into a RecyclerView for a basic chat app.</string>
    <string name="desc_auth_ui">Demonstrates the Firebase Auth UI flow, with customization options.</string>
    <string name="launch_title">FirebaseUI Auth Demo</string>
    <string name="green_theme">Green Theme</string>
    <string name="purple_theme">Purple Theme</string>
    <string name="use_theme_header">Use theme:</string>
    <string name="logo_header">Logo:</string>
    <string name="firebase_logo_label">Firebase Auth</string>
    <string name="google_logo_label">Google</string>
    <string name="no_logo_label">None</string>
    <string name="auth_providers_header">Use auth providers:</string>
    <string name="email_label">Email</string>
    <string name="facebook_label">Facebook</string>
    <string name="facebook_label_missing_config">Facebook - configuration missing</string>
    <string name="google_label">Google</string>
    <string name="google_label_missing_config">Google - configuration missing</string>
    <string name="google_tos_label">Google TOS</string>
</resources>