<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!--GENERAL SETTINGS-->
    <PreferenceCategory android:title="@string/pref_category_title_general">
        <ListPreference
            android:defaultValue="@string/pref_default_map_style"
            android:entries="@array/pref_list_map_style"
            android:entryValues="@array/pref_list_map_style_values"
            android:key="@string/pref_key_map_style"
            android:title="@string/pref_title_map_style" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_key_push_notifications"
            android:summaryOff="@string/pref_summary_notifications_off"
            android:summaryOn="@string/pref_summary_notifications_on"
            android:title="@string/pref_title_push_notifications" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_key_theme"
            android:summaryOff="@string/pref_summary_theme_off"
            android:summaryOn="@string/pref_summary_theme_on"
            android:title="@string/pref_title_theme" />
    </PreferenceCategory>

    <!--HOLDS BASIC INFO ABOUT THIS APP-->
    <PreferenceCategory android:title="@string/pref_category_title_about">
        <Preference
            android:key="@string/pref_key_account_id"
            android:title="@string/pref_title_account_id" />
        <Preference
            android:key="@string/pref_key_version_id"
            android:title="@string/pref_title_version_id" />
        <Preference
            android:key="@string/pref_key_build_id"
            android:title="@string/pref_title_build_id" />
    </PreferenceCategory>

</PreferenceScreen>
